--- a/QrApp_gerador/PopupCriaQr.xaml
+++ b/QrApp_gerador/PopupCriaQr.xaml
@@ -9,7 +9,21 @@
                NavigationPage.HasNavigationBar="False">
 
     <Grid HeightRequest="550" WidthRequest="400" Margin="25">
+
+       
+        
         <VerticalStackLayout VerticalOptions="CenterAndExpand">
+
+            <Button x:Name="CounterBtn"
+                    Text="Fechar"
+                    BackgroundColor="Transparent"
+                    TextColor="White"
+                    FontSize="15"
+                    Clicked="OnClickFechar"
+                    Margin="0,0,50,0"
+                    FontAttributes="Bold"
+                    HorizontalOptions="EndAndExpand"/>
+            
             <Frame Padding="10" CornerRadius="30" Margin="50">
                 <VerticalStackLayout Spacing="15">
                     <Label x:Name="LblTitulo"
@@ -33,17 +47,6 @@
                            FontFamily="MairyExtralight"/>
                 </VerticalStackLayout>
             </Frame>
-
-            <Button x:Name="CounterBtn"
-                    Text="FECHAR"
-                    BackgroundColor="Transparent"
-                    TextColor="White"
-                    FontSize="20"
-                    Clicked="OnClickFechar"
-                    VerticalOptions="End"
-                    FontFamily="VigaRegular"
-                    FontAttributes="Bold"
-                    HorizontalOptions="CenterAndExpand"/>
         </VerticalStackLayout>
     </Grid>
 </toolkit:Popup>
